--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,5 +8,6 @@ set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -O3")
 
 add_subdirectory(extern/Catch2)
 add_subdirectory(extern/trompeloeil)
+add_subdirectory(extern/cxxopts)
 add_subdirectory(src)
 add_subdirectory(test)
