Complete simulation (not working)

--- a/sample_input.ini
+++ b/sample_input.ini
@@ -1,1 +1,11 @@
-boxSize = 1000
+initialVolume = 1000
+numOfParticles = 100
+temperature = 1
+pressure = 1
+positionStepSize = 0.5
+volumeStepSize = 10
+thermalisationSteps = 1000000
+averagingSteps = 100000
+seed = 1234
+shapeName = Sphere
+shapeAttributes = 1
