--- a/sample_input.ini
+++ b/sample_input.ini
@@ -5,7 +5,7 @@ pressure = 1
 positionStepSize = 0.5
 volumeStepSize = 10
 thermalisationSteps = 1000000
-averagingSteps = 100000
+averagingSteps = 1000000
 seed = 1234
 shapeName = Sphere
-shapeAttributes = 1
+shapeAttributes = 0.5
