--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,6 +1,6 @@
 project(rampack_test)
 
-add_executable(tests TestMain.cpp)
+add_executable(tests TestMain.cpp core/PeriodicBoundaryConditionsTest.cpp)
 
 target_link_libraries(tests PRIVATE rampack_src Catch2::Catch2 trompeloeil)
 target_include_directories(tests PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})
