Simulation validation test

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,8 +1,12 @@
 project(rampack_test)
 
-add_executable(tests TestMain.cpp tests/core/PeriodicBoundaryConditionsTest.cpp tests/core/LatticeArrangingModelTest.cpp
-               tests/core/PackingTest.cpp matchers/PackingApproxPositionsCatchMatcher.h tests/core/ShapeTest.cpp
-               tests/core/ShapeFactoryTest.cpp tests/core/SphereTest.cpp)
+add_executable(unit_tests TestMain.cpp unit_tests/core/PeriodicBoundaryConditionsTest.cpp
+        unit_tests/core/LatticeArrangingModelTest.cpp unit_tests/core/PackingTest.cpp
+        matchers/PackingApproxPositionsCatchMatcher.h unit_tests/core/ShapeTest.cpp
+        unit_tests/core/ShapeFactoryTest.cpp unit_tests/core/SphereTest.cpp)
+target_link_libraries(unit_tests PRIVATE rampack_src Catch2::Catch2 trompeloeil)
+target_include_directories(unit_tests PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})
 
-target_link_libraries(tests PRIVATE rampack_src Catch2::Catch2 trompeloeil)
-target_include_directories(tests PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})
+add_executable(valid_tests TestMain.cpp validation_tests/SimulationTest.cpp)
+target_link_libraries(valid_tests PRIVATE rampack_src Catch2::Catch2 trompeloeil)
+target_include_directories(valid_tests PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})
