sample_input.ini updated

--- a/sample_input.ini
+++ b/sample_input.ini
@@ -1,11 +1,15 @@
-initialVolume = 1000
+initialVolume = 300
 numOfParticles = 100
 temperature = 1
 pressure = 1
-positionStepSize = 0.5
-volumeStepSize = 10
-thermalisationSteps = 1000000
-averagingSteps = 1000000
+positionStepSize = 1
+volumeStepSize = 1
+thermalisationCycles = 100000
+averagingCycles = 10000
+averagingEvery = 100
 seed = 1234
 shapeName = Sphere
 shapeAttributes = 0.5
+wolframFilename = packing.nb
+compressibilityFilename = compressibility.txt
+densitySnapshotFilename = density_snapshots.txt
