--- a/sample_input.ini
+++ b/sample_input.ini
@@ -3,8 +3,9 @@ numOfParticles = 100
 temperature = 1
 pressure = 1
 positionStepSize = 1
+rotationStepSize = 1
 volumeStepSize = 1
-thermalisationCycles = 100000
+thermalisationCycles = 50000
 averagingCycles = 10000
 averagingEvery = 100
 seed = 1234
