--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -4,7 +4,8 @@ add_library(rampack_src STATIC core/Simulation.cpp utils/Assertions.h utils/Conf
             utils/Quantity.cpp utils/Utils.cpp frontend/Frontend.cpp frontend/Parameters.cpp core/Shape.cpp
             core/BoundaryConditions.h core/Packing.cpp core/LatticeArrangingModel.cpp core/FreeBoundaryConditions.h
             core/PeriodicBoundaryConditions.cpp core/shapes/Sphere.cpp frontend/ShapeFactory.cpp
-            geometry/Matrix.h geometry/Matrix.tpp geometry/Vector.h geometry/Vector.tpp core/shapes/Spherocylinder.cpp)
+            geometry/Matrix.h geometry/Matrix.tpp geometry/Vector.h geometry/Vector.tpp core/shapes/Spherocylinder.cpp
+            core/Interaction.h core/HardShape.h core/HardCoreInteraction.h)
 
 target_include_directories(rampack_src PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
 target_link_libraries(rampack_src PUBLIC cxxopts stdc++fs)
