--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -7,7 +7,8 @@ add_executable(unit_tests TestMain.cpp unit_tests/core/PeriodicBoundaryCondition
         unit_tests/geometry/VectorTest.cpp unit_tests/core/SpherocylinderTraitsTest.cpp
         unit_tests/core/CentralInteractionTest.cpp unit_tests/core/PolysphereTraitsTest.cpp
         unit_tests/core/PolysphereBananaTraitsTest.cpp matchers/VectorApproxMatcher.h
-        unit_tests/core/LennardJonesInteractionTest.cpp unit_tests/core/RepulsiveLennardJonesInteractionTest.cpp)
+        unit_tests/core/LennardJonesInteractionTest.cpp unit_tests/core/RepulsiveLennardJonesInteractionTest.cpp
+        unit_tests/core/NeighbourGridTest.cpp)
 target_link_libraries(unit_tests PRIVATE rampack_src Catch2::Catch2 trompeloeil)
 target_include_directories(unit_tests PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})
 
