--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -5,7 +5,7 @@ file(GLOB_RECURSE rampack_lib_sources CONFIGURE_DEPENDS "*/*.cpp" "*/*.h")
 add_library(rampack_lib STATIC ${rampack_lib_sources})
 
 target_include_directories(rampack_lib PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
-target_link_libraries(rampack_lib PUBLIC cxxopts stdc++fs)
+target_link_libraries(rampack_lib PUBLIC cxxopts)
 
 add_executable(rampack Main.cpp)
 target_link_libraries(rampack PRIVATE rampack_lib)
