--- a/sample_input.ini
+++ b/sample_input.ini
@@ -1,16 +1,40 @@
-initialVolume = 300
-numOfParticles = 100
-temperature = 1
-pressure = 1
-positionStepSize = 1
-rotationStepSize = 1
-volumeStepSize = 1
-thermalisationCycles = 50000
-averagingCycles = 10000
-averagingEvery = 100
+initialDimensions = 100 100 100
+initialArrangement = lattice default
+numOfParticles = 1000
+positionStepSize = 10
+rotationStepSize = 0.1
+volumeStepSize = 1000
 seed = 1234
 shapeName = Sphere
 shapeAttributes = 0.5
-wolframFilename = packing.nb
-compressibilityFilename = compressibility.txt
-densitySnapshotFilename = density_snapshots.txt
+interaction = hard
+
+[run.gas]
+temperature = 1
+pressure = 0.1
+thermalisationCycles = 10000
+averagingCycles = 5000
+averagingEvery = 100
+wolframFilename = packing_gas.nb
+outputFilename = out_gas.txt
+densitySnapshotFilename = density_gas.txt
+
+[run.liquid]
+temperature = 1
+pressure = 11.5
+thermalisationCycles = 250000
+averagingCycles = 50000
+averagingEvery = 100
+wolframFilename = packing_liquid.nb
+outputFilename = out_liquid.txt
+densitySnapshotFilename = density_liquid.txt
+
+[run.solid]
+temperature = 1
+pressure = 20
+thermalisationCycles = 1500000
+averagingCycles = 100000
+averagingEvery = 100
+wolframFilename = packing_solid.nb
+outputFilename = out_solid.txt
+densitySnapshotFilename = density_solid.txt
