Storing packing in the internal format

--- a/sample_input.ini
+++ b/sample_input.ini
@@ -15,6 +15,7 @@ pressure = 0.1
 thermalisationCycles = 10000
 averagingCycles = 5000
 averagingEvery = 100
+packingFilename = packing_gas.dat
 wolframFilename = packing_gas.nb
 outputFilename = out_gas.txt
 densitySnapshotFilename = density_gas.txt
@@ -25,6 +26,7 @@ pressure = 11.5
 thermalisationCycles = 250000
 averagingCycles = 50000
 averagingEvery = 100
+packingFilename = packing_liquid.dat
 wolframFilename = packing_liquid.nb
 outputFilename = out_liquid.txt
 densitySnapshotFilename = density_liquid.txt
@@ -35,6 +37,7 @@ pressure = 20
 thermalisationCycles = 1500000
 averagingCycles = 100000
 averagingEvery = 100
+packingFilename = packing_solid.dat
 wolframFilename = packing_solid.nb
 outputFilename = out_solid.txt
 densitySnapshotFilename = density_solid.txt
