New parameters in sample_input.ini

--- a/sample_input.ini
+++ b/sample_input.ini
@@ -8,6 +8,8 @@ seed = 1234
 shapeName = Sphere
 shapeAttributes = 0.5
 interaction = hard
+scalingThreads = 4
+domainDivisions = 2 2 1
 
 [run.gas]
 temperature = 1
