--- a/sample_input.ini
+++ b/sample_input.ini
@@ -10,6 +10,7 @@ shapeAttributes = 0.5
 interaction = hard
 scalingThreads = 4
 domainDivisions = 2 2 1
+scalingType = delta V
 
 [run.gas]
 temperature = 1
