Observables test, NematicOrded diagonalization fix

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,7 +1,7 @@
 project(rampack_lib)
 
 file(GLOB_RECURSE unit_tests_sources CONFIGURE_DEPENDS "unit_tests/*.cpp" "unit_tests/*.h" "matchers/*.cpp"
-        "matchers/*.h")
+        "matchers/*.h" "mocks/*.h")
 
 file(GLOB_RECURSE valid_tests_sources CONFIGURE_DEPENDS "validation_tests/*.cpp" "validation_tests/*.h")
 
