sample_input.ini updated : correct averaging and new fields

--- a/sample_input.ini
+++ b/sample_input.ini
@@ -16,31 +16,37 @@ scalingType = delta V
 temperature = 1
 pressure = 0.1
 thermalisationCycles = 10000
-averagingCycles = 5000
-averagingEvery = 100
+averagingCycles = 20000
+averagingEvery = 200
+snapshotEvery = 100
 packingFilename = packing_gas.dat
 wolframFilename = packing_gas.nb
-outputFilename = out_gas.txt
+outputFilename = out.txt
 densitySnapshotFilename = density_gas.txt
+observables = numberDensity , inline packingFraction , compressibilityFactor
 
 [run.liquid]
 temperature = 1
 pressure = 11.5
 thermalisationCycles = 250000
-averagingCycles = 50000
-averagingEvery = 100
+averagingCycles = 200000
+averagingEvery = 2000
+snapshotEvery = 100
 packingFilename = packing_liquid.dat
 wolframFilename = packing_liquid.nb
-outputFilename = out_liquid.txt
+outputFilename = out.txt
 densitySnapshotFilename = density_liquid.txt
+observables = numberDensity , inline packingFraction , compressibilityFactor
 
 [run.solid]
 temperature = 1
 pressure = 20
-thermalisationCycles = 1500000
-averagingCycles = 100000
-averagingEvery = 100
+thermalisationCycles = 1000000
+averagingCycles = 2000000
+averagingEvery = 20000
+snapshotEvery = 100
 packingFilename = packing_solid.dat
 wolframFilename = packing_solid.nb
-outputFilename = out_solid.txt
+outputFilename = out.txt
 densitySnapshotFilename = density_solid.txt
+observables = numberDensity , inline packingFraction , compressibilityFactor
