'orthorhombic' typos fix

--- a/sample_input.ini
+++ b/sample_input.ini
@@ -25,7 +25,7 @@
 
 # Below is the full list of general parameters with a detailed description of each.
 
-# Initial dimensions of the orthorombic simulation box. Supported variants:
+# Initial dimensions of the orthorhombic simulation box. Supported variants:
 # 1. "[x length] [y length] [z length]"
 #    explicit box side lengths
 # 2. "auto"
@@ -33,14 +33,14 @@
 #    for variants 1.2, 1.4 and 2 of "initialArrangement"
 initialDimensions = 100 100 100
 
-# Initial arrangement of particles. Supported variants are 1. "orthorombic" and 2. "presimulated" arrangement. The
-# orthorombic simualtion box has cuboidal shape an a single particle in the unit cell. It has the following variants:
-# 1.1. "orthorombic ([clinicity]) ([polarization]) default"
+# Initial arrangement of particles. Supported variants are 1. "orthorhombic" and 2. "presimulated" arrangement. The
+# orthorhombic simualtion box has cuboidal shape an a single particle in the unit cell. It has the following variants:
+# 1.1. "orthorhombic ([clinicity]) ([polarization]) default"
 #      cubic lattice of N x N x N particles with cell size calculated based on "initialDimensions" ("auto" value is
 #      forbidden). N is calculated as a ceiling of cube root of "numOfParticles" parameter. "[polarization]" and
 #      "[clinicity]" are optional parameters allowing to create antipolar and/or tilted layouts. They are described
 #      below
-# 1.2. "orthorombic ([clinicity]) ([polarization]) spacing [spacing value] [axis order] [num molecules x] [... y] \
+# 1.2. "orthorhombic ([clinicity]) ([polarization]) spacing [spacing value] [axis order] [num molecules x] [... y] \
 #       [... z]"
 #      this variant automatically optimizes cell size for "[num molecules x]" times "[... y]" times "[... z]" lattice,
 #      so that the distance between the molecules is "[spacing value]". The box size is always fitted automatically -
@@ -53,10 +53,10 @@ initialDimensions = 100 100 100
 #      increased by "[spacing value]". The final result may vary depending on "[axis order]", however the configuration
 #      is guaranteed not to overlap. The order giving the optimal spacing should be carefully chosen basing on the
 #      molecule's shape. The "preview" program mode may come in handy (see README.md or ./rampack --help)
-# 1.3. "orthorombic ([clinicity]) ([polarization]) [num molecules x] [... y] [... z]
+# 1.3. "orthorhombic ([clinicity]) ([polarization]) [num molecules x] [... y] [... z]
 #      this variant calculates lattice cell dimensions based on "initialDimensions" parameter and number or molecules in
 #      each direction of the lattice: [num molecules x], [... y] and [... z]
-# 1.4. "orthorombic ([clinicity]) ([polarization]) [num molecules x] [... y] [... z] [cell size x] [... y] [... z]
+# 1.4. "orthorhombic ([clinicity]) ([polarization]) [num molecules x] [... y] [... z] [cell size x] [... y] [... z]
 #      in this variant cell length and number of molecules in each direction is specified explicitly. If the box size
 #      is specified explicitly in "initialDimensions" and is bigger than the whole lattice, the lattice will be placed
 #      in the middle of the simulation box. For "initialDimensions = auto", the box size will be fitted to the lattice
@@ -282,7 +282,7 @@ outputFilename = out.txt
 # The name of file to output snapshot observable values every "snapshotEvery" cycles in SSV format (space separated
 # values). Parameter names are printed in the first row (the header). First column is cycle number, next ones are values
 # of observables.
-densitySnapshotFilename = density_gas.txt
+observableSnapshotFilename = observable_gas.txt
 
 # The observables which should be computed during simulation. Each observables is in the format
 # "([scope]) [observable name] ([observable-dependent parameters])"
@@ -292,7 +292,7 @@ densitySnapshotFilename = density_gas.txt
 #    the observable is computed and printed on the standard output every 100 cycles. It may be useful for monitoring
 #    the run in real time
 # 2. "snapshot"
-#    the observable is computed for every snapshot recorded in snapshot output file (see "densitySnapshotFilename"
+#    the observable is computed for every snapshot recorded in snapshot output file (see "observableSnapshotFilename"
 #    parameter)
 # 3. "averaging"
 #    the observable is ensemble-averaged during averaging phase, printed on the standard output after the finished run
@@ -376,7 +376,7 @@ snapshotEvery = 100
 packingFilename = packing_liquid.dat
 wolframFilename = packing_liquid.nb
 outputFilename = out.txt
-densitySnapshotFilename = density_liquid.txt
+observableSnapshotFilename = observable_liquid.txt
 observables = numberDensity , inline packingFraction , compressibilityFactor
 
 [run.solid]
@@ -389,5 +389,5 @@ snapshotEvery = 100
 packingFilename = packing_solid.dat
 wolframFilename = packing_solid.nb
 outputFilename = out.txt
-densitySnapshotFilename = density_solid.txt
+observableSnapshotFilename = observable_solid.txt
 observables = numberDensity , inline packingFraction , compressibilityFactor
