LinearVolumeScaler simplification and detailed balance fix

--- a/sample_input.ini
+++ b/sample_input.ini
@@ -117,22 +117,16 @@ rotationStepSize = 0.1
 #    The ratio of all box sides remains constant while the volume is changed by an amount sampled from
 #    [-"volumeStepSize", "volumeStepSize"] interval
 # 2. "linear [variant-dependent parameters]"
-#    instead of the volume, it perturbs the box sides by a value from a uniformly sampled interval [-D_alpha, D_alpha].
-#    The endpoints +/- D_alpha (alpha=x,y,z) of the interval are given by "volumeStepSize", however are proportional to
-#    side lengths. More precisely, D_alpha is equal
-#    D_alpha = "volumeStepSize" * L_alpha / V^(1/3),
-#    where L_alpha is box side length in alpha direction and V is system volume. A small correction is done for the
-#    expansion moves to preserve Markov-chain detailed balance. The perturbation for each side may be independent or
-#    not, depending on the variant:
+#    instead of the volume, it perturbs the box side lengths by a value from a uniformly sampled interval
+#    [-"volumeStepSize", "volumeStepSize"]. The perturbation for each side may be independent or not, depending on the
+#    variant:
 #    2.1. "linear isotropic"
-#         All dimensions are scaled using the same random number, meaning that the box side length ratio remains
-#         constant
+#         All dimensions are changed using the same random number. Note, however, that the ratio of side lengths remains
+#         constant only for a cubic box.
 #    2.2. "linear anisotropic [axes]"
 #         If "[axes]" is on of: "x", "y" or "z", the side length corresponding to this axis will be perturbed using a
 #         different (independent) random number for than the two other axes. If "[axes]" is "xyz", all three sides will
-#         be perturbed independently. In both cases two or all side length ratios of the simulation box change. Note
-#         that regardless of which sides are perturbed independently, the actual length changes are always computed
-#         according to the above equation for D_alpha
+#         be perturbed independently.
 # 3. "logarithmic [variant-dependent parameters]"
 #    All side lengths are scaled by multiplication by a factor instead of addition. The factor is sampled \
 #    logarithmically - first a number x_alpha is sampled uniformly from [-"volumeStepSize", "volumeStepSize"] interval.
