--- a/sample_input.ini
+++ b/sample_input.ini
@@ -219,6 +219,11 @@ scalingThreads = 4
 # threads than molecule threads is forbidden. Then "1 1 1" is given, domain division will be deactivated.
 domainDivisions = 2 2 1
 
+# If true, the current run will be stored, when SIGINT or SIGTERM is received. It means that all specified output files
+# will be produced. The run can be continued later using the standard --continue option. If false, the run will be
+# permanently lost.
+saveOnSignal = true
+
 
 ########## RUNS AND RUN SPECIFIC PARAMETERS ##########
 
