Documentation and refactoring

--- a/sample_input.ini
+++ b/sample_input.ini
@@ -34,7 +34,7 @@
 initialDimensions = 100 100 100
 
 # Initial arrangement of particles. Supported variants are 1. "orthorhombic" and 2. "presimulated" arrangement. The
-# orthorhombic simualtion box has cuboidal shape an a single particle in the unit cell. It has the following variants:
+# orthorhombic simulation box has cuboidal shape an a single particle in the unit cell. It has the following variants:
 # 1.1. "orthorhombic ([clinicity]) ([polarization]) default"
 #      cubic lattice of N x N x N particles with cell size calculated based on "initialDimensions" ("auto" value is
 #      forbidden). N is calculated as a ceiling of cube root of "numOfParticles" parameter. "[polarization]" and
@@ -127,7 +127,7 @@ rotationStepSize = 0.1
 #         If "[axes]" is on of: "x", "y" or "z", the side length corresponding to this axis will be perturbed using a
 #         different (independent) random number for than the two other axes. If "[axes]" is "xyz", all three sides will
 #         be perturbed independently.
-# 3. "logarithmic [variant-dependent parameters]"
+# 3. "(independent) log [variant-dependent parameters]"
 #    All side lengths are scaled by multiplication by a factor instead of addition. The factor is sampled \
 #    logarithmically - first a number x_alpha is sampled uniformly from [-"volumeStepSize", "volumeStepSize"] interval.
 #    Then, the scaling factor is calculated as exp(x_alpha). Scaling factor for each side may be independent of not
@@ -143,6 +143,11 @@ rotationStepSize = 0.1
 #         example "independent log anisotropic x" means that either: x axis is scaled and y, z are unaltered, or y and z
 #         are scaled and x is unaltered - both options with the same probability. "independent log anisotropic xyz"
 #         means scaling one side at a time.
+# 4. "(independent) delta triclinic"
+#    Box side vectors are translated by random vectors with coordinates sampled uniformly from
+#    [-"volumeStepSize", "volumeStepSize"] interval. This scaling types enables to perform simulations in
+#    isobaric-isotension ensemble (relaxing off-diagonal parts of stress tensor). If "independent" is specified, only a
+#    single, randomly sample side will be perturbed. Otherwise, all are perturbed at once.
 scalingType = delta V
 volumeStepSize = 1000
 
