Lollipop shape documented in sample_input.ini

--- a/sample_input.ini
+++ b/sample_input.ini
@@ -198,7 +198,18 @@ seed = 1234
 #         same as for "Sphere", however each pair of beads is treated separately
 #    4.3. "repulsive_lj [epsilon] [sigma]"
 #         same as for "Sphere", however each pair of beads is treated separately
-# 5. "PolyspherocylinderBanana [arc radius] [arc angle] [number of segments] [radius] ([subdivisions])"
+# 5. "PolysphereLollipop [num of spheres] [small radius] [large radius] [small penetration] [large penetration]"
+#    linear chain of "[num of spheres]" spheres, where a single sphere at the end has different size than the rest of
+#    them (usually larger). "[small radius]" and "[large radius]" are radii of, respectively, all apart from the last,
+#    and the last sphere. Similarly, "[small penetration]" and "[large penetration]" describe how much spheres overlap.
+#    In particular, 0 means that the spheres are tangent.
+#    5.1. "hard"
+#         same as for "Sphere", however each pair of beads is treated separately
+#    5.2. "lj [epsilon] [sigma]"
+#         same as for "Sphere", however each pair of beads is treated separately
+#    5.3. "repulsive_lj [epsilon] [sigma]"
+#         same as for "Sphere", however each pair of beads is treated separately
+# 6. "PolyspherocylinderBanana [arc radius] [arc angle] [number of segments] [radius] ([subdivisions])"
 #    a molecule similarly shaped as "PolysphereBanana", but using spherocylinders. "[arc radius]" and "[arc angle]" have
 #    identical meaning as in "PolysphereBanana", "[radius]" is the radius of spherocylinders' caps (equivalently their
 #    half-width). "[number of segments]" is a number of spherocylinders used to approximate the arc - the arc is divided
@@ -206,7 +217,7 @@ seed = 1234
 #    "PolysphereBanana". If the optional parameter "[subdivisions]" is specified, each spherocylinder is divided into
 #    that many parts - it does not change the physics, but may increase the speed of the simulation. Default value is 1
 #    (no divisions). Supported interactions:
-#    5.1. "hard"
+#    6.1. "hard"
 #         hard-core repulsion of each pair of spherocylinders
 shapeName = Sphere
 shapeAttributes = 0.5
