README and sample_integration.ini updated

--- a/sample_inputs/sample_integration.ini
+++ b/sample_inputs/sample_integration.ini
@@ -1,6 +1,9 @@
-# This is an example INI input file for the `casino' mode specifying the whole gas-liquid-solid simulation sequence for
-# hard spheres. The user is encouraged to read the documentation carefully and run this test file to see how it works in
-# practice.
+# This is an example INI input file for the `casino' mode specifying a whole NpT gas-liquid-solid simulation sequence
+# for hard spheres. The user is encouraged to read the documentation carefully and run this test file to see how it
+# works in practice.
+#
+# This file contains the general instruction for input files and most information are here. Additional sample input
+# file sample_overlap_reduction.ini provides additional information on overlap reduction run type.
 
 ########## HOW TO READ THE INSTRUCTION ##########
 
@@ -17,11 +20,12 @@
 
 # The file starts with the general section (which is anonymous INI section) specifying common parameters such as the
 # molecule's shape, interaction type, etc. as well as the initial configuration, while subsequent sections named
-# "\[run.[run_name]\]" (where \[ and \] are literal square brackets) describe runs (for example under different
-# pressures or temperatures) that will be performed sequentially one by one. "[run_name]" is a user-defined name of the
-# run (may be for example "gas", "liquid" and "crystal" as in this exemplary input file). The final snapshot of one run
-# is the starting point for the next one. The initial configuration for the first run is configured using
-# "initialDimensions", "initialArrangement" and "numOrParticles" parameters in this section.
+# "\[[run_type].[run_name]\]" (where \[ and \] are literal square brackets) describe runs that will be performed
+# sequentially one by one. "[run_type]" should be "integration" for NpT runs and "overlaps" for overlap reduction.
+# "[run_name]" is a user-defined name of the run (may be for example "gas", "liquid" and "crystal" as in this exemplary
+# input file). The final snapshot of one run is the starting point for the next one. The initial configuration for the
+# first run is configured using "initialDimensions", "initialArrangement" and "numOrParticles" parameters in this
+# section.
 
 # Below is the full list of general parameters with a detailed description of each.
 
@@ -243,11 +247,13 @@ saveOnSignal = true
 
 ########## RUNS AND RUN SPECIFIC PARAMETERS ##########
 
-# In this exemplary input file there are three runs with names: "gas", "liquid" and "solid". Each run has a set of its
-# own parameters such as temperature, pressure, observables to be calculated, etc. The run starts with thermalization
-# phase in which the system should reach its equilibrium state. After that, the averaging phase follows, when ensemble
-# averages of the observables are computed. During averaging phase the auto-adjustment of molecule an volume move
-# amplitudes is turned off. After the finished run ensemble averages of observables are printed on the standard output.
+# In this exemplary input file there are three integration runs with names: "gas", "liquid" and "solid". Example overlap
+# reduction run is in another sample input file - "sample_overlap_reduction.ini". Each run has a set of its
+# own parameters such as temperature, pressure, observables to be calculated, etc. The integration starts with
+# thermalization phase in which the system should reach its equilibrium state. After that, the averaging phase follows,
+# when ensemble averages of the observables are computed. During averaging phase the auto-adjustment of molecule an
+# volume move amplitudes is turned off. After the finished run ensemble averages of observables are printed on the
+# standard output.
 # Moreover one can request to output the following auxiliary data:
 # 1. internal representation of the packing
 # 2. Wolfram Mathematica notebook with the visualisation of the final snapshot
@@ -255,9 +261,9 @@ saveOnSignal = true
 # 4. instantaneous values of the observables every N cycles
 # The observables to compute are specified using "observables" parameter.
 
-# Each run is an INI section with the format "\[run.[run name]\]" - "[run name]" is user-specified unique name of the
-# run
-[run.gas]
+# Each integration run is an INI section with the format "\[integration.[run name]\]" - "[run name]" is user-specified
+# unique name of the run
+[integration.gas]
 
 # Temperature in k_B units
 temperature = 1
@@ -381,7 +387,7 @@ observables = numberDensity , inline packingFraction , compressibilityFactor
 # This is the end of parameters for "gas" run. Next ones are for subsequent "liquid" and "solid" runs. They have
 # identical meaning, so the descriptions are not repeated.
 
-[run.liquid]
+[integration.liquid]
 temperature = 1
 pressure = 11.5
 thermalisationCycles = 250000
@@ -394,7 +400,7 @@ outputFilename = out.txt
 observableSnapshotFilename = observable_liquid.txt
 observables = numberDensity , inline packingFraction , compressibilityFactor
 
-[run.solid]
+[integration.solid]
 temperature = 1
 pressure = 20
 thermalisationCycles = 1000000
