New sample input file (overlap reduction)

--- a/sample_inputs/sample_integration.ini
+++ b/sample_inputs/sample_integration.ini
@@ -169,12 +169,16 @@ seed = 1234
 #         hard-core interaction
 #    1.2. "lj [epsilon] [sigma]"
 #         Lennard-Jones interaction with a standard definition of "[epsilon]" and "[sigma]" parameters:
-#         LJ(r) (4 epsilon ((sigma/r)^12 - (sigma/r)^6)
+#         LJ(r) = 4 epsilon ((sigma/r)^12 - (sigma/r)^6)
 #         r is the distance between interaction centers
 #    1.3. "repulsive_lj [epsilon] [sigma]"
 #         Lennard-Jones, but only the repulsive part - the so-called Weeks-Chandler-Anderson potential:
 #         LJ(r) + epsilon   for r < 2^(1/6),
 #         0                 for r >= 2^(1/6).
+#    1.4. "square_inverse_core [epsilon] [sigma]"
+#         short-ranged attractive or repulsive interaction, resembling screened dipolar interaction, defined as:
+#         epsilon ((sigma/r)^2 - 1)   for r < sigma,
+#         0                           for r >= sigma.
 # 2. "Spherocylinder [length] [radius]"
 #    spherocylinder with cap radius "[radius]" (or, equivalently, half-width) and the distance between cap centers
 #    "[length]". For the default orientation, "Spherocylinder" is aligned with x axis. Supported interactions:
@@ -183,12 +187,7 @@ seed = 1234
 # 3. "KMer [number of spheres] [radius] [distance]"
 #    a linear chain of "[number of spheres]" spheres with radius "[radius]". The centers are equally spaced with a
 #    distance "[distance]". Supported interactions:
-#    3.1. "hard"
-#         same as for "Sphere", however each pair of beads is treated separately
-#    3.2. "lj [epsilon] [sigma]"
-#         same as for "Sphere", however each pair of beads is treated separately
-#    3.3. "repulsive_lj [epsilon] [sigma]"
-#         same as for "Sphere", however each pair of beads is treated separately
+#    ---- same as for "Sphere", however each pair of beads is treated separately
 # 4. "PolysphereBanana [arc radius] [arc angle] [number of spheres] [sphere radius]"
 #    chain of "[number of spheres]" spheres with radius "[sphere radius]" placed on an arc (banana-shaped). The arc is
 #    defined by its radius "[arc radius]" and arc angle "[arc angle]". The centres of spheres are equidistantly placed
@@ -196,23 +195,13 @@ seed = 1234
 #    "PolysphereBanana" molecule with a default orientation lie within xy plane, the main axis (joining the ends of the
 #    arc) is y axis and the arc is bent towards the negative x semi-axis (the vector joining either endpoint and the
 #    middle has a negative x component). Supported interactions:
-#    4.1. "hard"
-#         same as for "Sphere", however each pair of beads is treated separately
-#    4.2. "lj [epsilon] [sigma]"
-#         same as for "Sphere", however each pair of beads is treated separately
-#    4.3. "repulsive_lj [epsilon] [sigma]"
-#         same as for "Sphere", however each pair of beads is treated separately
+#    ---- same as for "Sphere", however each pair of beads is treated separately
 # 5. "PolysphereLollipop [num of spheres] [small radius] [large radius] [small penetration] [large penetration]"
 #    linear chain of "[num of spheres]" spheres, where a single sphere at the end has different size than the rest of
 #    them (usually larger). "[small radius]" and "[large radius]" are radii of, respectively, all apart from the last,
 #    and the last sphere. Similarly, "[small penetration]" and "[large penetration]" describe how much spheres overlap.
 #    In particular, 0 means that the spheres are tangent.
-#    5.1. "hard"
-#         same as for "Sphere", however each pair of beads is treated separately
-#    5.2. "lj [epsilon] [sigma]"
-#         same as for "Sphere", however each pair of beads is treated separately
-#    5.3. "repulsive_lj [epsilon] [sigma]"
-#         same as for "Sphere", however each pair of beads is treated separately
+#    ---- same as for "Sphere", however each pair of beads is treated separately
 # 6. "PolyspherocylinderBanana [arc radius] [arc angle] [number of segments] [radius] ([subdivisions])"
 #    a molecule similarly shaped as "PolysphereBanana", but using spherocylinders. "[arc radius]" and "[arc angle]" have
 #    identical meaning as in "PolysphereBanana", "[radius]" is the radius of spherocylinders' caps (equivalently their
