Shorted sample input files' names

--- a/sample_inputs/integration.ini
+++ b/sample_inputs/integration.ini
@@ -3,7 +3,7 @@
 # works in practice.
 #
 # This file contains the general instruction for input files and most information are here. Additional sample input
-# file sample_overlap_reduction.ini provides additional information on overlap reduction run type.
+# file overlap_reduction.ini provides additional information on overlap reduction run type.
 
 ########## HOW TO READ THE INSTRUCTION ##########
 
@@ -237,12 +237,11 @@ saveOnSignal = true
 ########## RUNS AND RUN SPECIFIC PARAMETERS ##########
 
 # In this exemplary input file there are three integration runs with names: "gas", "liquid" and "solid". Example overlap
-# reduction run is in another sample input file - "sample_overlap_reduction.ini". Each run has a set of its
-# own parameters such as temperature, pressure, observables to be calculated, etc. The integration starts with
-# thermalization phase in which the system should reach its equilibrium state. After that, the averaging phase follows,
-# when ensemble averages of the observables are computed. During averaging phase the auto-adjustment of molecule an
-# volume move amplitudes is turned off. After the finished run ensemble averages of observables are printed on the
-# standard output.
+# reduction run is in another sample input file - "overlap_reduction.ini". Each run has a set of its own parameters such
+# as temperature, pressure, observables to be calculated, etc. The integration starts with thermalization phase in which
+# the system should reach its equilibrium state. After that, the averaging phase follows, when ensemble averages of the
+# observables are computed. During averaging phase the auto-adjustment of molecule an volume move amplitudes is turned
+# off. After the finished run ensemble averages of observables are printed on the standard output.
 # Moreover one can request to output the following auxiliary data:
 # 1. internal representation of the packing
 # 2. Wolfram Mathematica notebook with the visualisation of the final snapshot
