--- a/sample_inputs/overlap_reduction.ini
+++ b/sample_inputs/overlap_reduction.ini
@@ -2,7 +2,7 @@
 # spheres (over maximal 0.74 packing fraction), followed by an integration run with short thermalization phase.
 #
 # The general information about input file, its structure and meaning of parameters are mainly gathered in
-# sample_integration.ini file. This input file only supplements it with information about overlap reduction mode.
+# integration.ini file. This input file only supplements it with information about overlap reduction mode.
 
 initialDimensions = 7 7 7
 initialArrangement = lattice default
