--- a/sample_inputs/integration.ini
+++ b/sample_inputs/integration.ini
@@ -202,6 +202,11 @@ seed = 1234
 #    and the last sphere. Similarly, "[small penetration]" and "[large penetration]" describe how much spheres overlap.
 #    In particular, 0 means that the spheres are tangent.
 #    ---- same as for "Sphere", however each pair of beads is treated separately
+# 6. "PolysphereWedge [num of spheres] [small radius] [large radius] [penetration]"
+#    linear chain of "[num of spheres]" spheres, where radii of spheres are increased linearly. "[small radius]" and
+#    "[large radius]" are radii of, respectively, the first and the last sphere (usually the last one is larger).
+#    "[penetration]" describes how much spheres overlap. In particular, 0 means that the spheres are tangent.
+#    ---- same as for "Sphere", however each pair of beads is treated separately
 # 6. "PolyspherocylinderBanana [arc radius] [arc angle] [number of segments] [radius] ([subdivisions])"
 #    a molecule similarly shaped as "PolysphereBanana", but using spherocylinders. "[arc radius]" and "[arc angle]" have
 #    identical meaning as in "PolysphereBanana", "[radius]" is the radius of spherocylinders' caps (equivalently their
